# minigia

./: .gitignore  CMakeLists.txt  README.md  analyze.py  array_typedefs.h  bunch.h  bunch_data_paths.h.in  collective_operator.h  commxx.cc  commxx.h  commxx_divider.cc  commxx_divider.h  compare.h  core_diagnostics.cc  core_diagnostics.h  deposit.cc  deposit.h  deposit_new.cc  deposit_new.h  distributed_fft3d.cc  distributed_fft3d.h  distributed_rectangular_grid.cc  distributed_rectangular_grid.h  fakempi.h  fft-main.cc  four_momentum.h  gsvector.h  independent_particle.cc  interpolate_rectangular_zyx.h  math_constants.h  multi_array_offsets.h  multi_array_typedefs.h  parallel_utils.h  physical_constants.h  populate.cc  populate.h  rectangular_grid.cc  rectangular_grid.h  rectangular_grid_domain.cc  rectangular_grid_domain.h  (+14 more)
CMake/: findFFTW.cmake
fftwpp/: CMakeLists.txt  utils.h
tests/: CMakeLists.txt  rectangular_grid_domain_eigen_fixture.h  test_distributed_rectangular_grid_eigen.cc
